# sercomm

./: .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Jenkinsfile  README.md  appveyor.yml  config.h.in
examples/: CMakeLists.txt  list.c  monitor.c  wait.c  watcher.c
include/public/sercomm/: base.h  common.h  comms.h  dev.h  err.h  sercomm.h  types.h
include/sercomm/: err.h
include/sercomm/posix/: time.h  types.h
include/sercomm/win/: err.h  types.h
sercomm/: base.c  err.c
sercomm/posix/: base.c  comms.c  dev_linux.c  dev_macos.c  time.c
sercomm/win/: base.c  comms.c  dev.c  err.c
